crates/math-core/tests/snapshots/conversion_test__product.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\prod_n n"
---
<math>
    <munder>
        <mo lspace="0">∏</mo>
        <mi>n</mi>
    </munder>
    <mi>n</mi>
</math>
