crates/math-core/tests/snapshots/conversion_test__quintuple_prime.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "f'''''"
---
<math>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
        </mrow>
    </msup>
</math>
