crates/math-core/tests/snapshots/conversion_test__raisebox_multi_cancel.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\raisebox{1em}{foo{\\raisebox{-1em}{bar}}}"
---
<math>
    <mrow>
        <mpadded voffset="1em">
            <mtext>foo</mtext>
        </mpadded>
        <mtext>bar</mtext>
    </mrow>
</math>
