crates/math-core/tests/snapshots/conversion_test__raisebox_stack_different.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\raisebox{1em}{\\raisebox{1pt}{foobar}}"
---
<math>
    <mpadded voffset="0.1rem"><mpadded voffset="1em"><mtext>foobar</mtext></mpadded></mpadded>
</math>
