crates/math-core/tests/snapshots/conversion_test__rational_number.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "3.14"
---
<math>
    <mn>3.14</mn>
</math>
