crates/math-core/tests/snapshots/conversion_test__rcases.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\begin{rcases}0 &\\text{if } x\\geq 0\\\\1 &\\text{otherwise.}\\end{rcases} \\Rightarrow \\cdots"
---
<math>
    <mrow>
        <mo>⁣</mo>
        <mtable displaystyle="false" scriptlevel="0">
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>0</mn>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mtext>if </mtext>
                    <mi>x</mi>
                    <mo>≥</mo>
                    <mn>0</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>1</mn>
                </mtd>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;padding-left:1em;">
                    <mtext>otherwise.</mtext>
                </mtd>
            </mtr>
        </mtable>
        <mo>}</mo>
    </mrow>
    <mo stretchy="false">⇒</mo>
    <mo lspace="0">·</mo>
    <mo lspace="0" rspace="0.1667em">·</mo>
    <mo lspace="0" rspace="0">·</mo>
</math>
